--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
@@ -16,6 +15,7 @@
     "axios": "^1.1.3",
     "expo": "^44.0.0",
     "expo-checkbox": "~2.0.0",
+    "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "phosphor-react-native": "^1.1.2",
     "react": "17.0.1",
@@ -27,7 +27,7 @@
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
-    "react-native-skeleton-placeholder": "^5.2.3",
+    "react-native-skeleton-content": "^1.0.28",
     "react-native-smooth-pincode-input": "^1.0.9",
     "react-native-svg": "12.1.1",
     "react-native-vector-icons": "^9.2.0",
@@ -38,5 +38,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.9"
   },
-  "private": true
+  "private": true,
+  "name": "elder-care",
+  "version": "1.0.0"
 }
