--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.1.3",
     "expo": "^44.0.0",
     "expo-checkbox": "~2.0.0",
+    "expo-linear-gradient": "^12.0.1",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "phosphor-react-native": "^1.1.2",
