--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-masked-view/masked-view": "^0.2.8",
+    "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "@react-navigation/stack": "^6.3.4",
     "axios": "^1.1.3",
     "expo": "^44.0.0",
     "expo-checkbox": "~2.0.0",
-    "expo-linear-gradient": "^12.0.1",
+    "expo-linear-gradient": "~11.0.3",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "phosphor-react-native": "^1.1.2",
