--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/roboto": "^0.2.2",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/bottom-tabs": "^6.4.0",
@@ -16,6 +17,7 @@
     "axios": "^1.1.3",
     "expo": "^44.0.0",
     "expo-checkbox": "~2.0.0",
+    "expo-font": "^11.0.1",
     "expo-linear-gradient": "~11.0.3",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
