--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native": "0.64.3",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-pager-view": "^6.1.0",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "^4.4.1",
@@ -34,6 +35,7 @@
     "react-native-skeleton-content": "^1.0.28",
     "react-native-smooth-pincode-input": "^1.0.9",
     "react-native-svg": "12.1.1",
+    "react-native-tab-view": "^3.3.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.1",
     "react-navigation": "^4.4.4",
