--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.2",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-masked-view/masked-view": "^0.2.8",
+    "@react-native-masked-view/masked-view": "0.2.6",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
@@ -17,7 +17,8 @@
     "axios": "^1.1.3",
     "expo": "^44.0.0",
     "expo-checkbox": "~2.0.0",
-    "expo-font": "^11.0.1",
+    "expo-font": "~10.0.4",
+    "expo-haptics": "^12.0.1",
     "expo-linear-gradient": "~11.0.3",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
@@ -25,13 +26,13 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-gesture-handler": "^2.8.0",
+    "react-native-gesture-handler": "~2.1.0",
     "react-native-linear-gradient": "^2.6.2",
-    "react-native-pager-view": "^6.1.0",
+    "react-native-pager-view": "5.4.9",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "~2.3.1",
-    "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-skeleton-content": "^1.0.28",
     "react-native-smooth-pincode-input": "^1.0.9",
     "react-native-svg": "12.1.1",
