--- a/package.json
+++ b/package.json
@@ -9,41 +9,44 @@
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.2",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-masked-view/masked-view": "0.2.6",
+    "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "@react-navigation/stack": "^6.3.4",
     "axios": "^1.1.3",
-    "expo": "^44.0.0",
-    "expo-checkbox": "~2.0.0",
-    "expo-font": "~10.0.4",
-    "expo-haptics": "^12.0.1",
-    "expo-linear-gradient": "~11.0.3",
-    "expo-splash-screen": "~0.14.1",
-    "expo-status-bar": "~1.2.0",
+    "deprecated-react-native-prop-types": "^2.3.0",
+    "expo": "^47.0.0",
+    "expo-checkbox": "~2.2.2",
+    "expo-font": "~11.0.1",
+    "expo-haptics": "~12.0.1",
+    "expo-linear-gradient": "~12.0.1",
+    "expo-splash-screen": "~0.17.4",
+    "expo-status-bar": "~1.4.2",
+    "patch-package": "^6.5.0",
     "phosphor-react-native": "^1.1.2",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-gesture-handler": "~2.1.0",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-linear-gradient": "^2.6.2",
-    "react-native-pager-view": "5.4.9",
+    "react-native-pager-view": "6.0.1",
     "react-native-phone-number-input": "^2.1.0",
-    "react-native-reanimated": "~2.3.1",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
+    "react-native-reanimated": "^2.12.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-native-skeleton-content": "^1.0.28",
+    "react-native-skeleton-placeholder": "^5.2.3",
     "react-native-smooth-pincode-input": "^1.0.9",
-    "react-native-svg": "12.1.1",
+    "react-native-svg": "13.4.0",
     "react-native-tab-view": "^3.3.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "0.17.1",
+    "react-native-web": "~0.18.7",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.19.3"
   },
   "private": true,
   "name": "elder-care",
