--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "expo": "^44.0.0",
     "expo-checkbox": "~2.0.0",
     "expo-font": "~10.0.4",
-    "expo-haptics": "^12.0.1",
+    "expo-haptics": "~11.1.0",
+    "expo-image-picker": "~12.0.1",
     "expo-linear-gradient": "~11.0.3",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
@@ -35,6 +36,7 @@
     "react-native-screens": "~3.10.1",
     "react-native-skeleton-content": "^1.0.28",
     "react-native-smooth-pincode-input": "^1.0.9",
+    "react-native-star-rating": "^1.1.0",
     "react-native-svg": "12.1.1",
     "react-native-tab-view": "^3.3.0",
     "react-native-vector-icons": "^9.2.0",
