--- a/package.json
+++ b/package.json
@@ -7,31 +7,28 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo-google-fonts/roboto": "^0.2.2",
-    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/datetimepicker": "6.5.2",
-    "@react-native-community/masked-view": "0.1.10",
-    "@react-native-masked-view/masked-view": "0.2.8",
+    "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "@react-navigation/stack": "^6.3.4",
     "axios": "^1.1.3",
     "deprecated-react-native-prop-types": "^2.3.0",
-    "expo": "^47.0.0",
+    "expo": "~47.0.6",
     "expo-checkbox": "~2.2.2",
-    "expo-font": "~11.0.1",
     "expo-haptics": "~12.0.1",
-    "expo-image-picker": "~14.0.1",
+    "expo-image-picker": "~14.0.2",
     "expo-linear-gradient": "~12.0.1",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "phosphor-react-native": "^1.1.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-native": "0.68.3",
+    "react-native": "0.70.5",
+    "react-native-confirmation-code-field": "^7.3.1",
     "react-native-gesture-handler": "~2.8.0",
-    "react-native-linear-gradient": "^2.6.2",
     "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-pager-view": "6.0.1",
     "react-native-phone-number-input": "^2.1.0",
@@ -41,21 +38,16 @@
     "react-native-skeleton-content": "^1.0.28",
     "react-native-smooth-pincode-input": "^1.0.9",
     "react-native-star-rating": "^1.1.0",
+    "react-native-star-rating-widget": "^1.5.0",
     "react-native-svg": "13.4.0",
     "react-native-tab-view": "^3.3.0",
-    "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.7",
-    "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4",
     "rn-placeholder": "^3.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3"
+    "@babel/core": "^7.12.9"
   },
   "private": true,
   "resolutions": {
     "react-native-reanimated": "^2.9.1"
-  },
-  "name": "elder-care",
-  "version": "1.0.0"
+  }
 }
