--- a/package.json
+++ b/package.json
@@ -46,8 +46,5 @@
   "devDependencies": {
     "@babel/core": "^7.12.9"
   },
-  "private": true,
-  "resolutions": {
-    "react-native-reanimated": "^2.9.1"
-  }
+  "private": true
 }
