--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "deprecated-react-native-prop-types": "^2.3.0",
     "expo": "~47.0.6",
     "expo-checkbox": "~2.2.2",
-    "expo-haptics": "~12.0.1",
     "expo-image-picker": "~14.0.2",
     "expo-linear-gradient": "~12.0.1",
     "expo-splash-screen": "~0.17.5",
@@ -36,8 +35,6 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-skeleton-content": "^1.0.28",
-    "react-native-smooth-pincode-input": "^1.0.9",
-    "react-native-star-rating": "^1.1.0",
     "react-native-star-rating-widget": "^1.5.0",
     "react-native-svg": "13.4.0",
     "react-native-tab-view": "^3.3.0",
@@ -46,5 +43,8 @@
   "devDependencies": {
     "@babel/core": "^7.12.9"
   },
-  "private": true
+  "private": true,
+  "resolutions": {
+    "react-native-reanimated": "^2.9.1"
+  }
 }
