--- a/package.json
+++ b/package.json
@@ -7,19 +7,21 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/datetimepicker": "6.5.2",
-    "@react-native-masked-view/masked-view": "^0.2.8",
+    "@react-native-masked-view/masked-view": "0.2.8",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "@react-navigation/stack": "^6.3.4",
     "axios": "^1.1.3",
     "deprecated-react-native-prop-types": "^2.3.0",
-    "expo": "~47.0.6",
+    "expo": "47.0.0",
     "expo-checkbox": "~2.2.2",
+    "expo-device": "~5.0.0",
     "expo-image-picker": "~14.0.2",
     "expo-linear-gradient": "~12.0.1",
+    "expo-notifications": "~0.17.0",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "phosphor-react-native": "^1.1.2",
@@ -40,7 +42,10 @@
     "rn-placeholder": "^3.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.19.3"
   },
-  "private": true
+  "private": true,
+  "resolutions": {
+    "react-native-reanimated": "^2.9.1"
+  }
 }
