--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.1.3",
     "deprecated-react-native-prop-types": "^2.3.0",
     "expo": "47.0.0",
+    "expo-camera": "~13.1.0",
     "expo-checkbox": "~2.2.2",
     "expo-device": "~5.0.0",
     "expo-image-picker": "~14.0.2",
