--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-pager-view": "6.0.1",
     "react-native-phone-number-input": "^2.1.0",
-    "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-skeleton-content": "^1.0.28",
@@ -45,8 +44,5 @@
   "devDependencies": {
     "@babel/core": "^7.19.3"
   },
-  "private": true,
-  "resolutions": {
-    "react-native-reanimated": "^2.9.1"
-  }
+  "private": true
 }
