--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@react-navigation/stack": "^6.3.4",
     "axios": "^1.1.3",
     "deprecated-react-native-prop-types": "^2.3.0",
-    "expo": "47.0.0",
+    "expo": "~47.0.8",
     "expo-camera": "~13.1.0",
     "expo-checkbox": "~2.2.2",
     "expo-device": "~5.0.0",
@@ -44,5 +44,7 @@
   "devDependencies": {
     "@babel/core": "^7.19.3"
   },
-  "private": true
+  "private": true,
+  "name": "elder-care",
+  "version": "1.0.0"
 }
